# gacha-event-tracker

./: .gitignore  api.lst  app.py  database.py  events.py  models.py  pyproject.toml  z.db  z.db-journal
gacha_event_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: main.html
