[project]
name = "gacha-event-manager"
version = "0.1.0"
description = "A simple app to track active events."
authors = [
  { name = "Mayank Sinha", email = "sinha.mayank900@gmail.com" },
]
dependencies = [
  "fastapi>=0.115.4",
  "uvicorn>=0.32.0",
  "sqlalchemy>=2.0.36",
  "jinja2>=3.1.4"

]
readme = "README.md"
requires-python = ">= 3.10"


[tool.ruff]
ignore = ["E501"]

